--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -2040,11 +2040,17 @@ body > section {
   // body {
   // width:100%;
   // }
-  .grid-sizer,
-  .grid-item {
-    width: 80%;
+#resume{
+  .grid{
 
+    div {
+      width: 80%;
+
+    }
   }
+}
+
+
 
 }
 @media (max-width: 360px){
@@ -2055,10 +2061,21 @@ body > section {
 // body {
 // width:360px;
 // }
-.grid-sizer,
-.grid-item {
-  width: 80%;
+#resume{
+  .grid{
 
+    div {
+      width: 90%;
+    }
+    .grid-item{
+      width: 90%;
+
+    }
+    .gallery_container{
+      width: 90%;
+      height: 250px;
+    }
+  }
 }
 
 #about .title li {
