--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -2053,14 +2053,17 @@ body > section {
 
 
 }
+@media (max-width: 378px){
+  .col-xs-6{
+    width: 100%;
+  }
+}
 @media (max-width: 360px){
 	/* .menu-items {
 		font-size: 67px;
     margin-left: 366px;
 } */
-// body {
-// width:360px;
-// }
+
 #resume{
   .grid{
 
